--- a/views/rss-data.ejs
+++ b/views/rss-data.ejs
@@ -199,10 +199,12 @@
                 </td>
                 <td class="px-4 py-3 text-sm text-gray-600 dark:text-gray-400">
                   <div class="flex flex-col gap-1">
-                    <% if (item.tvdb_id) { %>
-                      <a href="https://www.thetvdb.com/series/<%= item.tvdb_id %>" target="_blank" class="text-blue-600 hover:underline">
+                    <% if (item.tvdb_id && item.tvdb_url) { %>
+                      <a href="<%= item.tvdb_url %>" target="_blank" class="text-blue-600 hover:underline">
                         <%= item.tvdb_id %>
                       </a>
+                    <% } else if (item.tvdb_id) { %>
+                      <%= item.tvdb_id %>
                     <% } else { %>
                       <span>-</span>
                     <% } %>
